fixed button font, drop down overflows, and redundant styling

--- a/src/assets/_styles.scss
+++ b/src/assets/_styles.scss
@@ -26,3 +26,9 @@ $standard-radius: 4px;
 @mixin box-shadow {
   box-shadow: 5px 5px 15px -3px rgba(0, 0, 0, 0.1);
 }
+
+@mixin ellipsis-overflow {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
