--- a/src/components/arrow/arrow.scss
+++ b/src/components/arrow/arrow.scss
@@ -3,7 +3,6 @@
 $arrow-height: 14px;
 
 svg.arrow {
-  padding: 0px 10px;
   width: $arrow-height;
   height: $arrow-height;
 
