--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;700&display=swap');
 @import '../../assets/colors';
 @import '../../assets/styles';
 .button {
   padding: 3px 13px;
   border-radius: $standard-radius;
+  font-family: 'Comfortaa';
   font-size: 15px;
   box-sizing: border-box;
   border: 1px solid transparent;
