--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -28,6 +28,15 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    label {
+      @include ellipsis-overflow;
+    }
+
+    div {
+      @include flex-center;
+      margin: 0px 10px;
+    }
   }
 
   .options {
@@ -45,9 +54,9 @@
       border-left: 1px solid $flashcard-white;
       border-right: 1px solid $flashcard-white;
       background-color: $white;
-      overflow: scroll;
       padding: 5px;
       @include white-hover;
+      @include ellipsis-overflow;
 
       &:first-child {
         border-radius: $standard-radius $standard-radius 0px 0px;
